--- a/majora-tests.html
+++ b/majora-tests.html
@@ -7,6 +7,7 @@
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
+<script src="//code.jquery.com/jquery-2.1.1.js"></script>
 <script src="//code.jquery.com/qunit/qunit-1.14.0.js"></script>
 <script src="majora.js"></script>
 <script src="majora-tests.js"></script>
